# introspect

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md
.github/workflows/: ci.yml
introspect/: Cargo.toml
introspect-core/: Cargo.toml
introspect-core/src/: entity.rs  enum.rs  lib.rs  member.rs  struct.rs
introspect-core/src/enum/: builder.rs  variant.rs
introspect-core/src/enum/variant/: builder.rs
introspect-core/src/struct/: builder.rs  field.rs
introspect-core/src/struct/field/: builder.rs
introspect-proc-macros/: Cargo.toml
introspect-proc-macros/src/: lib.rs
introspect/examples/: introspect_enum.rs  introspect_struct.rs
introspect/src/: enum.rs  lib.rs  struct.rs
